# mcp3x6x-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: config.rs  lib.rs
